# ncorpos-vi-py

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  repos.cmake
.github/workflows/: ci.yml  pypi.yml  pypl.yml
src/ncorpos_vi/: __init__.py  api.py
src/ncorpos_vi/ext/: ncorpos_vi.f90
tests/: teste.py
