[build-system]
requires = [
  "scikit-build-core>=0.5",
  "setuptools",
  "wheel",
  "numpy",
  "meson",
  "ninja",
  "meson-python"
]
build-backend = "scikit_build_core.build"

[project]
name = "ncorpos-vi-py"
version = "1.0.1"
description = "Geração de valores iniciais para problemas de N-corpos via fortran"
authors = [{ name = "potalej", email="oapotalej@gmail.com" }]
maintainers = [{ name = "potalej", email="oapotalej@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["numpy", "ncorpos-utilidades-py>=0.2.2"]
keywords = ["n-corpos"]

[project.urls]
Repository = "https://github.com/potalej/ncorpos-vi-py"

[tool.scikit-build]
wheel.packages = ["ncorpos_vi"]

[tool.scikit-build.sdist]
include = [
  "fortran/**",
  "CMakeLists.txt",
  "src/ncorpos_vi/**"
]